[package]
name = "tsumugiEngine"
version = "0.1.0"
authors = ["Snamas <43674314+KominamiYuto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "tsumugi_any",
    "tsumugi_any_derive",
]
[dependencies]
tsumugi_any = {path ="./tsumugi_any"}