[package]
name = "tsumugiEngine"
version = "0.1.0"
authors = ["Snamas <43674314+KominamiYuto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "tsumugi_macro",
    "tsumugi_macro_derive",
    "tsumugi",
    "tsumugiWindowController",
    "tsugumi_windows_library",
    "tsumugiKeyboardInput",
    "tsumugiWinRT",
    "tsumuGraphic_DirectX12"
]
[dependencies]
tsumugi_macro = {path = "tsumugi_macro" }
tsumugi = {path = "tsumugi" }
tsumugiWindowController = {path = "tsumugiWindowController" }
tsumugiKeyboardInput = {path = "tsumugiKeyboardInput" }
tsugumi_windows_library = {path = "tsugumi_windows_library" }
tsumugiWinRT = {path = "tsumugiWinRT" }
tsumuGraphic_DirectX12 = {path = "tsumuGraphic_DirectX12" }