[package]
name = "tsumugiWindowController"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser","winerror","d3d12","dxgi1_6","dxgi1_5","dxgi1_4","dxgi1_3","dxgi1_2","dxgi","dxgiformat","dxgitype","d3dcompiler","winnt","unknwnbase","minwindef","windef","d3d12sdklayers","libloaderapi","d3dcommon","synchapi","winbase","handleapi","minwinbase","errhandlingapi"] }
tsugumi_windows_library =  {path = "../tsugumi_windows_library" }
tsumugi = {path = "../tsumugi" }
tsumugiKeyboardInput = {path = "../tsumugiKeyboardInput" }