[package]
name = "tsumugi_macro"
version = "0.1.0"
authors = ["Snamas <43674314+KominamiYuto@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tsumugi_macro_derive = {path = "../tsumugi_macro_derive" }
