[package]
name = "tsumugi_macro_derive"
version = "0.1.0"
authors = ["Snamas <43674314+KominamiYuto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = "1.0.74"